Language: Update language terms

--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -177,11 +177,11 @@
     "Your browser does not support Javascript": "Ihr Browser unterst\u00fctzt kein JavaScript",
     "Email reply header": "Am {0} schrieb {1} ({2}):",
     "My files": "Meine Dateien",
-    "Read the installation guide": "Die Installationsanweisung lesen",
+    "Read the installation guide": "lesen Sie die Installationsanleitung",
     "Installation language": "Sprache f\u00fcr die Installation",
     "Requirements": "Voraussetzungen",
     "License": "Lizenz",
-    "Database settings": "Database settings",
+    "Database settings": "Datenbankeinstellungen",
     "Config settings": "Konfiguration",
     "Show Overview": "\u00dcbersicht anzeigen",
     "Install": "Installieren",
@@ -243,9 +243,9 @@
     "Could not import terms": "Could not import terms",
     "Definition": "Definition",
     "Install step 1": "Install step 1",
-    "Step 1 - Installation Language": "Step 1 - Installation Language",
+    "Step 1 - Installation Language": "Schritt 1 - Installationssprache",
     "Next": "Weiter",
-    "Please select installation language": "Please select installation language",
+    "Please select installation language": "Bitte w\u00e4hlen Sie die Installationssprache",
     "Server requirements": "Voraussetzungen des Servers",
     "Server requirements information": "Server requirements information",
     "PHP version ": "PHP version ",
@@ -263,15 +263,15 @@
     "Previous": "Zur\u00fcck",
     "Upgrade Chamilo LMS version": "Chamilo LMS-Version aktualisieren",
     "For more details {0}": "For more details {0}",
-    "Step 2 - Requirements": "Step 2 - Requirements",
-    "read the installation guide": "read the installation guide",
+    "Step 2 - Requirements": "Schritt 2 - Anforderungen",
+    "read the installation guide": "lesen Sie die Installationsanleitung",
     "Warning!": "Warning!",
     "Contact information": "Kontakt-Informationen",
     "Select one": "Eins ausw\u00e4hlen",
     "Send information": "senden",
     "You must accept the licence": "Sie m\u00fcssen die Lizenz akzeptieren",
     "Contact information has been sent": "Kontakt-Informationen wurden versendet",
-    "Step 3 - License": "Step 3 - License",
+    "Step 3 - License": "Schritt 3 - Lizenz",
     "Printable version": "Druckversion",
     "I accept": "Ich akzeptiere",
     "CC website": "CC website",
@@ -285,8 +285,8 @@
     "Preferred contact language": "Bevorzugte Kontakt-Sprache",
     "Do you have the power to take financial decisions on behalf of your company?": "K\u00f6nnen Sie finanzielle Entscheidungen innerhalb Ihrer Firma / Organisation f\u00e4llen?",
     "Check database connection": "Verbindung zur Datenbank pr\u00fcfen",
-    "Step 4 - Database settings": "Step 4 - Database settings",
-    "Database host": "Database host",
+    "Step 4 - Database settings": "Schritt 4 - Datenbankeinstellungen",
+    "Database host": "Datenbankhost",
     "Port": "Port",
     "Database login": "Database login",
     "Database password": "Database password",
@@ -324,7 +324,7 @@
     "Here are the values you entered": "Hier sind die Werte, die eingetragen wurden",
     "Main language": "Haupt-Sprache",
     "Database": "Datenbank",
-    "Database Host": "Datenbank-Server",
+    "Database Host": "Datenbankhost",
     "Database Login": "DB Username",
     "Database Password": "DB Passwort",
     "Step 7 - Installation process execution": "Step 7 - Installation process execution",
@@ -557,7 +557,7 @@
     "A database with the same name <b>already exists</b>.": "Eine Datenbank mit dem gleichen Namen <b>existiert bereits</b>!",
     "To protect your site, make the whole %s directory read-only (chmod -R 0555 on Linux) and delete the %s directory.": "Um Ihre Installation zu sch\u00fctzen, setzen Sie das Verzeichnis {0} auf nur-lesen (oder chmod 0555 auf Linux-basierenden Systemen). Anschlie\u00dfend bitte das Verzeichnis {1} l\u00f6schen.",
     "Cannot find your language in the list? Contact us at info@chamilo.org to contribute as a translator.": "Ihre Sprache nicht in der Liste gefunden? Bewerben Sie sich unter info@chamilo.org als \u00dcbersetzer.",
-    "Please read the following requirements thoroughly.": "Bitte sorgf\u00e4ltig lesen",
+    "Please read the following requirements thoroughly.": "Please read the following requirements thoroughly.",
     "Recommended settings for your server configuration. These settings are set in the php.ini configuration file on your server.": "Empfohlene Einstellungen f\u00fcr die Konfiguration Ihres Servers. Diese Einstellungen werden in der php.ini Datei auf Ihrem Server vorgenommen.",
     "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)": "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)",
     "Chamilo is free software distributed under the GNU General Public licence (GPL).": "Chamilo ist freie Software, die unter der GNU General Public Licence angeboten wird.",
