--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -17,7 +17,7 @@
     "Survey": "Encuesta",
     "Surveys": "Encuestas",
     "Tracking": "Tracking",
-    "Course maintenance": "Course maintenance",
+    "Course maintenance": "Mantenimiento del curso",
     "Course setting": "Course setting",
     "Sign in": "Ingresar",
     "My courses": "Mis cursos",
@@ -177,11 +177,11 @@
     "Your browser does not support Javascript": "Su navegador no soporta el JavaScript",
     "Email reply header": "El {0}, {1} ({2}) escribi\u00f3:",
     "My files": "Mis archivos",
-    "Read the installation guide": "Leer la gu\u00eda de instalaci\u00f3n",
+    "Read the installation guide": "consulte la gu\u00eda de instalaci\u00f3n",
     "Installation language": "Idioma de instalaci\u00f3n",
     "Requirements": "Requerido",
     "License": "Licencia",
-    "Database settings": "Database settings",
+    "Database settings": "Configuraci\u00f3n de la base de datos",
     "Config settings": "Par\u00e1metros de configuraci\u00f3n",
     "Show Overview": "Sumario de la instalaci\u00f3n",
     "Install": "Instalar",
@@ -243,9 +243,9 @@
     "Could not import terms": "Could not import terms",
     "Definition": "Definition",
     "Install step 1": "Install step 1",
-    "Step 1 - Installation Language": "Step 1 - Installation Language",
+    "Step 1 - Installation Language": "Paso 1 - Idioma de instalaci\u00f3n",
     "Next": "Siguiente",
-    "Please select installation language": "Please select installation language",
+    "Please select installation language": "Por favor, seleccione el idioma de instalaci\u00f3n",
     "Server requirements": "Requisitos del servidor",
     "Server requirements information": "Server requirements information",
     "PHP version ": "PHP version ",
@@ -263,15 +263,15 @@
     "Previous": "Anterior",
     "Upgrade Chamilo LMS version": "Actualizar la versi\u00f3n de Chamilo LMS",
     "For more details {0}": "For more details {0}",
-    "Step 2 - Requirements": "Step 2 - Requirements",
-    "read the installation guide": "read the installation guide",
+    "Step 2 - Requirements": "Paso 2 - Requisitos",
+    "read the installation guide": "consulte la gu\u00eda de instalaci\u00f3n",
     "Warning!": "Warning!",
     "Contact information": "Informaci\u00f3n del contacto",
     "Select one": "Seleccione uno",
     "Send information": "Enviar la informaci\u00f3n",
     "You must accept the licence": "Debe aceptar la licencia para poder usar este software",
     "Contact information has been sent": "Informaci\u00f3n de contacto enviada",
-    "Step 3 - License": "Step 3 - License",
+    "Step 3 - License": "Paso 3 - Licencia",
     "Printable version": "Versi\u00f3n para imprimir",
     "I accept": "Acepto",
     "CC website": "CC website",
@@ -285,8 +285,8 @@
     "Preferred contact language": "\u00bfQu\u00e9 idioma de contacto prefiere?",
     "Do you have the power to take financial decisions on behalf of your company?": "\u00bfTiene la capacidad de tomar decisiones financieras?",
     "Check database connection": "Comprobar la conexi\u00f3n con la base de datos",
-    "Step 4 - Database settings": "Step 4 - Database settings",
-    "Database host": "Database host",
+    "Step 4 - Database settings": "Paso 4 - Configuraci\u00f3n de la base de datos",
+    "Database host": "Host de la base de datos",
     "Port": "Puerto",
     "Database login": "Database login",
     "Database password": "Database password",
@@ -314,7 +314,7 @@
     "Your company short name": "Acr\u00f3nimo de la organizaci\u00f3n",
     "URL of this company": "URL de la organizaci\u00f3n",
     "Encryption method": "M\u00e9todo de encriptaci\u00f3n",
-    "None": "None",
+    "None": "Ninguno/a",
     "Allow self-registration": "Permitir que los propios usuarios puedan registrarse",
     "After approval": "Despu\u00e9s de ser aprobado",
     "Allow self-registration as a trainer": "Permitir que los propios usuarios puedan registrarse como creadores de cursos",
@@ -324,7 +324,7 @@
     "Here are the values you entered": "\u00c9stos son los valores que ha introducido",
     "Main language": "Idioma principal",
     "Database": "Base de datos",
-    "Database Host": "Servidor de base de datos",
+    "Database Host": "Host de la base de datos",
     "Database Login": "Nombre de usuario de la base de datos",
     "Database Password": "Contrase\u00f1a de la base de datos",
     "Step 7 - Installation process execution": "Step 7 - Installation process execution",
@@ -402,21 +402,21 @@
     "Pick success color": "Pick success color",
     "Pick success color gradient": "Pick success color gradient",
     "Pick danger color": "Pick danger color",
-    "You can see examples of how chamilo will look here": "You can see examples of how chamilo will look here",
-    "Buttons": "Buttons",
+    "You can see examples of how chamilo will look here": "Puede ver ejemplos de c\u00f3mo se ver\u00e1 Chamilo aqu\u00ed",
+    "Buttons": "Botones",
     "Button": "Button",
     "Disabled": "Desactivado",
     "Secondary": "Segundo",
-    "Tertiary": "Tertiary",
+    "Tertiary": "Terciario",
     "Success": "Calificaci\u00f3n",
-    "Danger": "Danger",
+    "Danger": "Peligro",
     "Menu on button pressed": "Menu on button pressed",
-    "Checkbox and radio buttons": "Checkbox and radio buttons",
+    "Checkbox and radio buttons": "Casilla de verificaci\u00f3n y botones de opci\u00f3n",
     "Checkbox 1": "Checkbox 1",
     "Checkbox 2": "Checkbox 2",
     "This is a text example": "This is a text example",
-    "Show dialog": "Show dialog",
-    "Dialog example": "Dialog example",
+    "Show dialog": "Mostrar di\u00e1logo",
+    "Dialog example": "Ejemplo de di\u00e1logo",
     "Item 1": "Item 1",
     "Item 2": "Item 2",
     "Item 3": "Item 3",
@@ -449,9 +449,9 @@
     "Are you sure you want to delete this event?": "Are you sure you want to delete this event?",
     "Edit introduction": "Edit introduction",
     "Show all": "Mostrar todos",
-    "Hide all": "Hide all",
-    "Sort": "Sort",
-    "Customize": "Customize",
+    "Hide all": "Ocultar todo",
+    "Sort": "Ordenar",
+    "Customize": "Personalizar",
     "Updated": "\u00daltima modificaci\u00f3n",
     "Create certificate": "Crear certificado",
     "New drawing": "New drawing",
@@ -549,15 +549,15 @@
     "Business card": "Tarjeta personal",
     "Teacher profile picture": "Teacher profile picture",
     "Picture": "Foto",
-    "Sender profile picture": "Sender profile picture",
-    "Receiver profile picture": "Receiver profile picture",
-    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture",
+    "Sender profile picture": "Foto de perfil del remitente",
+    "Receiver profile picture": "Foto de perfil del destinatario",
+    "Carbon copy receiver profile picture": "Perfil del destinatario de copia carbonc\u00edlica",
     "Explore more courses": "Explorar m\u00e1s cursos",
     "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:": "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:",
     "A database with the same name <b>already exists</b>.": "Una base de datos con el mismo nombre <b>ya existe</b>. El contenido de la base de datos se perder\u00e1.",
     "To protect your site, make the whole %s directory read-only (chmod -R 0555 on Linux) and delete the %s directory.": "Para proteger su instalaci\u00f3n, ponga la carpeta {0} en solo lectura (chmod -R 0555 bajo Linux) y borre completamente la carpeta {1}.",
     "Cannot find your language in the list? Contact us at info@chamilo.org to contribute as a translator.": "\u00bfAlgun idioma no se encuentra en la lista? Aceptamos contribuciones de nuevas traducciones! Contactar info@chamilo.org",
-    "Please read the following requirements thoroughly.": "Lea con atenci\u00f3n",
+    "Please read the following requirements thoroughly.": "Please read the following requirements thoroughly.",
     "Recommended settings for your server configuration. These settings are set in the php.ini configuration file on your server.": "Par\u00e1metros recomendados para la configuraci\u00f3n de su servidor. Estos par\u00e1metros deben establecerse en el fichero de configuraci\u00f3n php.ini de su servidor.",
     "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)": "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)",
     "Chamilo is free software distributed under the GNU General Public licence (GPL).": "Chamilo es software libre distribuido bajo GNU General Public licence (GPL)",
