--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -177,11 +177,11 @@
     "Your browser does not support Javascript": "Votre navigateur ne supporte pas le JavaScript",
     "Email reply header": "Le {0}, {1} ({2}) a \u00e9crit\u202f:",
     "My files": "Mes fichiers",
-    "Read the installation guide": "Lire le guide d'installation",
+    "Read the installation guide": "consultez le guide d'installation",
     "Installation language": "Langue d'installation",
     "Requirements": "Pr\u00e9-requis",
     "License": "License",
-    "Database settings": "Database settings",
+    "Database settings": "Param\u00e8tres de base de donn\u00e9es",
     "Config settings": "Param\u00e8tres de config",
     "Show Overview": "R\u00e9capitulatif",
     "Install": "Installation",
@@ -243,9 +243,9 @@
     "Could not import terms": "Could not import terms",
     "Definition": "Definition",
     "Install step 1": "Install step 1",
-    "Step 1 - Installation Language": "Step 1 - Installation Language",
+    "Step 1 - Installation Language": "\u00c9tape 1 - Langue d'installation",
     "Next": "Suivant",
-    "Please select installation language": "Please select installation language",
+    "Please select installation language": "S\u00e9lectionnez une langue d'installation",
     "Server requirements": "Pr\u00e9-requis serveur",
     "Server requirements information": "Server requirements information",
     "PHP version ": "PHP version ",
@@ -263,15 +263,15 @@
     "Previous": "Pr\u00e9c\u00e9dent",
     "Upgrade Chamilo LMS version": "Mettre \u00e0 jour depuis une version ant\u00e9rieure",
     "For more details {0}": "For more details {0}",
-    "Step 2 - Requirements": "Step 2 - Requirements",
-    "read the installation guide": "read the installation guide",
+    "Step 2 - Requirements": "\u00c9tape 2 - Pr\u00e9-requis",
+    "read the installation guide": "consultez le guide d'installation",
     "Warning!": "Warning!",
     "Contact information": "Information de contact",
     "Select one": "Chosissez",
     "Send information": "Envoyer l'information",
     "You must accept the licence": "Vous devez accepter la licence pour continuer",
     "Contact information has been sent": "L'information de contact a \u00e9t\u00e9 envoy\u00e9e. Merci.",
-    "Step 3 - License": "Step 3 - License",
+    "Step 3 - License": "\u00c9tape 3 - Licence",
     "Printable version": "Version imprimable",
     "I accept": "J'accepte",
     "CC website": "CC website",
@@ -285,8 +285,8 @@
     "Preferred contact language": "Langue de contact favorite",
     "Do you have the power to take financial decisions on behalf of your company?": "\u00cates-vous habilit\u00e9 \u00e0 prendre des d\u00e9cisions financi\u00e8res pour votre entreprise\u202f?",
     "Check database connection": "V\u00e9rification de la connexion \u00e0 la base de donn\u00e9es",
-    "Step 4 - Database settings": "Step 4 - Database settings",
-    "Database host": "Database host",
+    "Step 4 - Database settings": "\u00c9tape 4 - Param\u00e8tres de base de donn\u00e9es",
+    "Database host": "H\u00f4te du serveur de bases de donn\u00e9es",
     "Port": "Port",
     "Database login": "Database login",
     "Database password": "Database password",
@@ -324,7 +324,7 @@
     "Here are the values you entered": "Voici les valeurs que vous avez introduites",
     "Main language": "Langue principale",
     "Database": "Base de donn\u00e9es",
-    "Database Host": "H\u00f4te base de donn\u00e9es",
+    "Database Host": "H\u00f4te du serveur de bases de donn\u00e9es",
     "Database Login": "Utilisateur base de donn\u00e9es",
     "Database Password": "Mot de passe base de donn\u00e9es",
     "Step 7 - Installation process execution": "Step 7 - Installation process execution",
@@ -557,7 +557,7 @@
     "A database with the same name <b>already exists</b>.": "Une base de donn\u00e9e du m\u00eame nom existe d\u00e9j\u00e0. Si vous utilisez cette base, son contenu actuel sera \u00e9cras\u00e9.",
     "To protect your site, make the whole %s directory read-only (chmod -R 0555 on Linux) and delete the %s directory.": "Pour prot\u00e9ger votre installation, mettez le r\u00e9pertoire {0} en lecture seule (chmod -R 0555 sous Linux) et supprimez compl\u00e8tement le r\u00e9pertoire {1}",
     "Cannot find your language in the list? Contact us at info@chamilo.org to contribute as a translator.": "Votre langue n'est pas dans la liste\u202f? Contactez-nous \u00e0 info@chamilo.org pour contribuer en tant que traducteur.",
-    "Please read the following requirements thoroughly.": "\u00c0 lire attentivement",
+    "Please read the following requirements thoroughly.": "Please read the following requirements thoroughly.",
     "Recommended settings for your server configuration. These settings are set in the php.ini configuration file on your server.": "Param\u00e8tres recommand\u00e9s pour tourner Chamilo. Ces param\u00e8tres sont attribu\u00e9s dans le fichier de configuration php.ini sur votre serveur.",
     "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)": "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)",
     "Chamilo is free software distributed under the GNU General Public licence (GPL).": "Chamilo est un logiciel libre distribu\u00e9 sous la licence GNU General Public Licence (GPL).",
